tests/errors/syntax_err02.v
module a;
task to (
  input integer [3:0]x
);
endtask
endmodule

